CHANGE LAYOUT, ADDING NEW JSON POLES, SMALL REFACTOR